--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <section class="about" id="sobre-mi">
             <div class="about__container">
                 <h3 class="about__title">Sobre mi</h3>
-                <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.  </p>
-                <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
+                <p class="about__paragraph">Hola, soy Adela Bastidas, y hace poco decidí darle un giro a mi vida, renuncié a mi trabajo después de casi 10 años, para sumergirme en el mundo de la tecnología, un mundo que me llama mucho la atención y en el cual espero quedarme a vivir. <br><br> Sé que los nuevos comienzos asustan, pero me considero una persona organizada y con una gran motivación, capaz de lograr mis metas, así sea largo el proceso, por lo cual actualmente me encuentro aprovechando al máximo la oportunidad brindada por ONE y Alura Latam, aprendiendo de los mejores la programación.   </p>
+                <p class="about__paragraph">Conocida en mi entorno por una persona responsable, honesta y con las capacidades necesarias para ejercer la labor que me confíen. Con buenas relaciones interpersonales, actividad positiva para trabajo en equipo, responsabilidad y facilidad de aprendizaje.</p>
                 <!-- Si quieres, pon tú firma acá! -->
                 <img src="./assets/imagenes/signature.png">
             </div>
@@ -240,7 +240,7 @@
                 <h2 class="formcontato__title">Contacto</h2>
                 <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
                 <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
-                <form class="formcontato__form" name="form" action="https://formsubmit.co/mayerlinbastidas92@gmail.com" method="POST">
+                <form class="formcontato__form" id="formulario" name="form" action=" " method="POST">
                     <input class="formcontato__input" type="text" id="nombre" name="nombre" placeholder="Nombre">
                     <input class="formcontato__input" type="email" id="email" name="email" placeholder="E-mail">
                     <input class="formcontato__input" type="text" id="asunto" name="asunto" placeholder="Assunto">
